making the configs in sync with the existing configs